...


    // ...

    const handleAutoFill = async () => {
        if (cpf.length < 11) {
            Alert.alert("CPF Inválido", "Digite um CPF válido para buscar os dados.");
            return;
        }

        setIsAutoFilling(true);

        try {
...
